# vo-amrwbenc

./: .gitignore  ChangeLog  Makefile.am  amrwb-enc.c  amrwb-enc.cpp  configure.ac  vo-amrwbenc.pc.in  wrapper.c
amrwbenc/: Android.mk
amrwbenc/inc/: typedefs.h
amrwbenc/src/: mem_align.c
amrwbenc/src/asm/ARMV5E/: Filt_6k_7k_opt.s  pred_lt4_1_opt.s
amrwbenc/src/asm/ARMV7/: Filt_6k_7k_neon.s  pred_lt4_1_neon.s
common/include/: voType.h
